# minecraft_bot

./: .gitignore  LICENSE  README.md  discord_bot.py  example_bot.py  pyproject.toml  requirements.txt  settings.py  settings.py.example
