[tool.poetry]
name = "minecraft_bot"
version = "0.1.0"
description = "Siot-Ieung Family Minecraft Discord Bot"
authors = ["ulismoon <ulismoon@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
"discord.py" = "^2.0.0"
python-dotenv = "^0.20.0"
mcrcon = "^0.7.0"
mcstatus = "^9.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
